--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
         <title>Hello World</title>
     </head>
     <body>
@@ -16,7 +16,29 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <div id="text_Message"></div>
     </body>
 </html>
+<script type="text/javascript" src="cordova.js"></script>
+<!--<script type="text/javascript" src="js/index.js"></script>-->
+<script type="text/javascript">
+    var app = {
+        initialize: function() {
+            document.addEventListener('deviceready', this.onDeviceReady.bind(this), false);
+        },
+        onDeviceReady: function() {
+            this.receivedEvent('deviceready');
+        },
+        receivedEvent: function(id) {
+            //var parentElement = document.getElementById(id);
+            //var listeningElement = parentElement.querySelector('.listening');
+            //var receivedElement = parentElement.querySelector('.received');
+            //listeningElement.setAttribute('style', 'display:none;');
+            //receivedElement.setAttribute('style', 'display:block;');
+            //console.log('Received Event: ' + id);
+            let db = window.openDatabase('ss', '1.0', 'ss', 2097152);
+            document.getElementById('text_Message').innerText = db.version;
+        }
+    };
+    app.initialize();
+</script>
