--- a/www/index.html
+++ b/www/index.html
@@ -5,18 +5,13 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
-        <title>Hello World</title>
+        <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+        <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+        <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+        <title></title>
     </head>
     <body>
-        <div class="app" style="display:none;">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <div id="text_Message"></div>
+        <ons-button onclick="alert('Hello World!')">Click Me</ons-button>
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
