--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,11 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
-        <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
-        <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <title></title>
     </head>
     <body>
-        <ons-button onclick="alert('Hello World!')">Click Me</ons-button>
+        <span id="text_Message"></span>
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
