--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,18 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/pure-min.css">
         <title></title>
     </head>
     <body>
+        <button class="pure-button pure-button-primary" onclick="show();">按钮</button>
         <span id="text_Message"></span>
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+    function show() {
+        document.getElementById('text_Message').innerText = 'abc';
+    }
+</script>
