--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,7 @@
         <title></title>
     </head>
     <body>
-        <div>efg</div>
-        <button class="pure-button pure-button-primary" onclick="show();">按钮</button>
+        <button class="pure-button pure-button-primary" id="btn_Show">按钮</button>
         <span id="text_Message"></span>
     </body>
 </html>
