--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -14,9 +14,15 @@
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript">
-    function show() {
-        document.getElementById('text_Message').innerText = 'abc';
-    } show() 
+    var app = {
+        IsDeviceReady : false
+    }
+    (function () {
+        document.addEventListener('deviceready', function () { app.IsDeviceReady = true; }, false);
+        $("#btn_Show").click(function(){
+            $("#text_Message").text('abc');
+        });
+    }());
 </script>
