--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,22 @@
         <title></title>
     </head>
     <body>
-        <div class="pure-g">
-            <div class="pure-u-1-4"><button class="pure-button" id="btn_Show"><i class="fa fa-cog"></i></button></div>
-            <div class="pure-u-1-4"></div>
-            <div class="pure-u-1-4"><span id="text_Message"></span></div>
-            <div class="pure-u-1-4"></div>
-        </div>
+        <header>
+            <div class="pure-menu pure-menu-horizontal">
+                <a href="#" class="pure-menu-heading pure-menu-link">菜单</a>
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">按钮</a></li>
+                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">事件</a></li>
+                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">设置</a></li>
+                </ul>
+            </div>
+            <div class="pure-g" sytle="he">
+                <div class="pure-u-1-4"><button class="pure-button" id="btn_Show"><i class="fa fa-cog"></i></button></div>
+                <div class="pure-u-1-4"></div>
+                <div class="pure-u-1-4"><span id="text_Message"></span></div>
+                <div class="pure-u-1-4"></div>
+            </div>
+        </header>
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
