--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
         <title></title>
     </head>
     <body>
-        <header>
+        <header style="background-color:gray;">
             <div class="pure-menu pure-menu-horizontal">
                 <a href="#" class="pure-menu-heading pure-menu-link">菜单</a>
                 <ul class="pure-menu-list">
@@ -17,12 +17,6 @@
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">事件</a></li>
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link">设置</a></li>
                 </ul>
-            </div>
-            <div class="pure-g" sytle="he">
-                <div class="pure-u-1-4"><button class="pure-button" id="btn_Show"><i class="fa fa-cog"></i></button></div>
-                <div class="pure-u-1-4"></div>
-                <div class="pure-u-1-4"><span id="text_Message"></span></div>
-                <div class="pure-u-1-4"></div>
             </div>
         </header>
     </body>
@@ -33,10 +27,11 @@
     var app = {
         IsDeviceReady : false
     };
-    document.addEventListener('deviceready', function () { app.IsDeviceReady = true; }, false);
+    document.addEventListener('deviceready', function () {
+        app.IsDeviceReady = true;
+    }, false);
     (function () {
         $("#btn_Show").click(function(){
-            $("#text_Message").text('abc');
         });
     }());
 </script>
