--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/pure-min.css">
         <title></title>
     </head>
-    <body>
-        <header style="background-color:gray;">
+    <body style="padding:1px;">
+        <header style="background-color:#FAFAFA;border: 1px solid #eee;">
             <div class="pure-menu pure-menu-horizontal">
                 <a href="#" class="pure-menu-heading pure-menu-link">菜单</a>
                 <ul class="pure-menu-list">
