--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/pure-min.css">
         <title></title>
     </head>
-    <body style="padding:1px;">
-        <header style="background-color:#FAFAFA;border: 1px solid #eee;">
+    <body>
+        <header style="background-color:#FAFAFA;">
             <div class="pure-menu pure-menu-horizontal">
                 <a href="#" class="pure-menu-heading pure-menu-link">菜单</a>
                 <ul class="pure-menu-list">
@@ -19,6 +19,11 @@
                 </ul>
             </div>
         </header>
+        <div class="pure-g">
+            <div class="pure-u-1-3"><button class="pure-button pure-button-primary" id="btn_Open">按钮</button></div>
+            <div class="pure-u-1-3"><button class="pure-button pure-button-primary">A Primary Button</button></div>
+            <div class="pure-u-1-3"><button class="pure-button pure-button-primary">A Primary Button</button></div>
+        </div>
     </body>
 </html>
 <script type="text/javascript" src="cordova.js"></script>
@@ -31,7 +36,8 @@
         app.IsDeviceReady = true;
     }, false);
     (function () {
-        $("#btn_Show").click(function(){
+        $("#btn_Open").click(function() {
+            var ref = cordova.InAppBrowser.open('http://10.22.0.239', '_blank', 'location=no');
         });
     }());
 </script>
