--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     }, false);
     (function () {
         $("#btn_Open").click(function() {
-            var ref = cordova.InAppBrowser.open('http://10.22.0.239', '_blank', 'location=no');
+            var ref = cordova.InAppBrowser.open('https://a.hmljy.com', '_blank', 'location=no');
         });
     }());
 </script>
